Added hierarchy and documented some design

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script>\n",
+    "    document.addEventListener(\"DOMContentLoaded\", function() {\n",
+    "        var toc = document.getElementById(\"toc\");\n",
+    "        var headers = Array.from(document.querySelectorAll(\"h1, h2, h3, h4, h5, h6\"));\n",
+    "        var sectionCounter = 0;\n",
+    "        var subSectionCounter = 0;\n",
+    "\n",
+    "        headers.forEach(function(el, i) {\n",
+    "            var name = el.innerText;\n",
+    "            if (name.toLowerCase() !== \"contents\") {\n",
+    "                var anchor = el.id = \"header-\" + i;\n",
+    "                var link = document.createElement(\"a\");\n",
+    "                link.href = \"#\" + anchor;\n",
+    "\n",
+    "                if (el.tagName === \"H1\") {\n",
+    "                    sectionCounter++;\n",
+    "                    subSectionCounter = 0;\n",
+    "                    link.innerText = sectionCounter + \".0 \" + name;\n",
+    "                } else if (el.tagName === \"H2\" || el.tagName === \"H3\") {\n",
+    "                    subSectionCounter++;\n",
+    "                    link.innerText = sectionCounter + \".\" + subSectionCounter + \" \" + name;\n",
+    "                }\n",
+    "\n",
+    "                var listItem = document.createElement(\"li\");\n",
+    "                listItem.appendChild(link);\n",
+    "                toc.appendChild(listItem);\n",
+    "            }\n",
+    "        });\n",
+    "    });\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **<u>Contents</u>**\n",
     "<div id=\"toc\"></div>\n",
     "\n",
@@ -26,23 +62,23 @@
     "\n",
     "1. **Notebooks and Paper Records:** Traditionally, people have used notebooks or paper records to keep track of medicine schedules. This method is simple and doesn't require any technical knowledge. However, it can be prone to human error and can be difficult to manage if there are multiple medicines or people involved.\n",
     "\n",
-    "<img src=\"imgs/analysis/PenPaper.png\" alt=\"logs\" width=\"300\">\n",
+    "<img src=\"imgs/analysis/PenPaper.png\" alt=\"pen-paper\" width=\"300\">\n",
     "\n",
     "2. **Memory:** Some people rely on their memory to remember when to take their medicine. This can work for individuals with a single medicine schedule, but it becomes increasingly difficult with more medicines or complex schedules. It's also unreliable due to the possibility of forgetting, especially for elderly individuals or those with memory-related health issues.\n",
     "\n",
-    "<img src=\"imgs/analysis/Thinking.png\" alt=\"logs\" width=\"300\">\n",
+    "<img src=\"imgs/analysis/Thinking.png\" alt=\"thinking\" width=\"300\">\n",
     "\n",
     "3. **Applications:** There are several mobile & desktop apps available that help manage medicine schedules. These apps can send reminders, keep track of medicine intake, and sometimes even provide information about the medicines. However, the quality and features of these apps can vary greatly.\n",
     "\n",
-    "<img src=\"imgs/analysis/Applications.png\" alt=\"logs\" width=\"300\">\n",
+    "<img src=\"imgs/analysis/Applications.png\" alt=\"applications\" width=\"300\">\n",
     "\n",
     "4. **Healthcare Providers:** Healthcare providers often give advice on how to manage medicine schedules. In some cases, they may provide tools or services to help manage this. However, this is often limited to their patients and may not be available to everyone.\n",
     "\n",
-    "<img src=\"imgs/analysis/Healthcare.png\" alt=\"logs\" width=\"300\">\n",
+    "<img src=\"imgs/analysis/Healthcare.png\" alt=\"healthcare\" width=\"300\">\n",
     "\n",
     "5. **Pharmacy Services:** Some pharmacies offer medicine management services. They can pre-package medicines according to the schedule, which can make it easier to manage. However, this service is usually only available for medicines purchased from that pharmacy.\n",
     "\n",
-    "<img src=\"imgs/analysis/Prescription.png\" alt=\"logs\" width=\"300\">\n",
+    "<img src=\"imgs/analysis/Prescription.png\" alt=\"prescription\" width=\"300\">\n",
     "\n",
     "\n",
     "### **<u>Questions to Consider</u>**\n",
@@ -132,45 +168,117 @@
     "\n",
     "# **<u>Documented Design</u>**\n",
     "\n",
+    "### Example UI Implementation\n",
+    "\n",
+    "The main goals of our User Interface (UI) are:\n",
+    "\n",
+    "1. **Usability**: The UI should be intuitive and easy to navigate. Even first-time users should be able to understand how to interact with the application without extensive instructions.\n",
+    "\n",
+    "2. **Efficiency**: The UI should be designed in a way that allows users to perform tasks quickly and efficiently. This includes minimising the number of clicks or actions required to perform a task.\n",
+    "\n",
+    "3. **Consistency**: The UI should maintain consistency across different sections of the application. This includes consistent use of colors, fonts, and layout.\n",
+    "\n",
+    "5. **Responsiveness**: The UI should be responsive, meaning it should look and function well on a variety of devices and screen sizes.\n",
+    "\n",
+    "Here are some potential pages of a design that fulfills these features\n",
+    "\n",
     "### **Navigation**\n",
-    "<img src=\"imgs/design/Navbar.png\" alt=\"logs\" width=\"600\">\n",
+    "\n",
+    "With a navbar that's just a hamburger away, it allows for quick navigation for all users, helping them find exactly what is needed in a much more categorised way.\n",
+    "\n",
+    "<img src=\"imgs/design/Navbar.png\" alt=\"navbar\" width=\"600\">\n",
     "\n",
     "### **Logs**\n",
+    "\n",
+    "Keeping logs is vital, especially if managing a nursing home. With these, it'll be much easier to find any unauthorised access attempts, as well as create a rollback point in the unlikely event of database issues.  \n",
+    "\n",
     "<img src=\"imgs/design/Logs.png\" alt=\"logs\" width=\"600\">\n",
     "\n",
     "### **User Settings**\n",
-    "<img src=\"imgs/design/User-Settings.png\" alt=\"logs\" width=\"600\">\n",
     "\n",
-    "<script>\n",
-    "    document.addEventListener(\"DOMContentLoaded\", function() {\n",
-    "        var toc = document.getElementById(\"toc\");\n",
-    "        var headers = Array.from(document.querySelectorAll(\"h1, h2, h3, h4, h5, h6\"));\n",
-    "        var sectionCounter = 0;\n",
-    "        var subSectionCounter = 0;\n",
+    "Having a dedicated user settings page will allow for quick changes to a system, something particularly useful for if sharing access with others on a network.\n",
     "\n",
-    "        headers.forEach(function(el, i) {\n",
-    "            var name = el.innerText;\n",
-    "            if (name.toLowerCase() !== \"contents\") {\n",
-    "                var anchor = el.id = \"header-\" + i;\n",
-    "                var link = document.createElement(\"a\");\n",
-    "                link.href = \"#\" + anchor;\n",
+    "<img src=\"imgs/design/User-Settings.png\" alt=\"user-settings\" width=\"600\">\n",
     "\n",
-    "                if (el.tagName === \"H1\") {\n",
-    "                    sectionCounter++;\n",
-    "                    subSectionCounter = 0;\n",
-    "                    link.innerText = sectionCounter + \".0 \" + name;\n",
-    "                } else if (el.tagName === \"H2\" || el.tagName === \"H3\") {\n",
-    "                    subSectionCounter++;\n",
-    "                    link.innerText = sectionCounter + \".\" + subSectionCounter + \" \" + name;\n",
-    "                }\n",
     "\n",
-    "                var listItem = document.createElement(\"li\");\n",
-    "                listItem.appendChild(link);\n",
-    "                toc.appendChild(listItem);\n",
-    "            }\n",
-    "        });\n",
-    "    });\n",
-    "</script>"
+    "### Hierarchy Chart\n",
+    "\n",
+    "**To create a hierarchy chart visualisation for the design, I wrote up some code that would take in an input file of an easily understandable config, convert that to something that is easier to work with code-wise, and then create a graphic visualisation of this.**\n",
+    "\n",
+    "**Python File:**\n",
+    "```py\n",
+    "import graphviz\n",
+    "\n",
+    "def generate_hierarchy_chart(input_file, output_file):\n",
+    "    with open(input_file, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "\n",
+    "    hierarchy = {} # Hierarchy Of Nodes\n",
+    "    parents = {0: 'root'}\n",
+    "\n",
+    "    for line in lines:\n",
+    "        indent = len(line) - len(line.lstrip(' '))\n",
+    "        node = line.strip()\n",
+    "\n",
+    "        parent_indent = max((i for i in parents if i < indent), default=0) # Find Parent Node\n",
+    "        parent_node = parents[parent_indent]\n",
+    "\n",
+    "        parents[indent] = node\n",
+    "\n",
+    "        if parent_node not in hierarchy:\n",
+    "            hierarchy[parent_node] = []\n",
+    "        hierarchy[parent_node].append(node)\n",
+    "\n",
+    "    dot = graphviz.Digraph(format='png') #  Actual Generation\n",
+    "    add_nodes(dot, 'root', hierarchy)\n",
+    "\n",
+    "    dot.render(output_file, view=False) # Save Output\n",
+    "\n",
+    "def add_nodes(dot, parent, hierarchy):\n",
+    "    if parent in hierarchy:\n",
+    "        for node in hierarchy[parent]:\n",
+    "            if parent != 'root':\n",
+    "                dot.node(parent)\n",
+    "                dot.edge(parent, node)\n",
+    "            dot.node(node)\n",
+    "            add_nodes(dot, node, hierarchy)\n",
+    "\n",
+    "generate_hierarchy_chart('input.txt', 'Hierarchy') # Usage\n",
+    "```\n",
+    "\n",
+    "**My Input File:**\n",
+    "```\n",
+    "Application\n",
+    "    Backend\n",
+    "        Server\n",
+    "            Routes\n",
+    "                GET\n",
+    "                POST\n",
+    "                PUT\n",
+    "                DELETE\n",
+    "            Middleware\n",
+    "                Authentication\n",
+    "```\n",
+    "See <a href=\"/imgs/design/hierarchy/hierarchyInput.html\" target=\"_blank\">Full File</a>\n",
+    "\n",
+    "**Generated Config File:**\n",
+    "```json\n",
+    "digraph {\n",
+    "\tApplication\n",
+    "\tApplication\n",
+    "\tApplication -> Backend\n",
+    "\tBackend\n",
+    "\tBackend\n",
+    "\tBackend -> Server\n",
+    "\tServer\n",
+    "\tServer\n",
+    "\tServer -> Routes\n",
+    "```\n",
+    "See <a href=\"/imgs/design/hierarchy/hierarchy.html\" target=\"_blank\">Full File</a>\n",
+    "\n",
+    "**Hierarchy Chart Output:**\n",
+    "\n",
+    "<img src=\"imgs/design/Hierarchy.png\" alt=\"hierarchy\" width=\"600\">\n"
    ]
   }
  ],
