Optimised hierarchy chart

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,36 +214,36 @@
     "        lines = file.readlines()\n",
     "\n",
     "    hierarchy = {} # Hierarchy Of Nodes\n",
-    "    parents = {0: 'root'}\n",
+    "    parents = {}\n",
     "\n",
     "    for line in lines:\n",
     "        indent = len(line) - len(line.lstrip(' '))\n",
     "        node = line.strip()\n",
     "\n",
-    "        parent_indent = max((i for i in parents if i < indent), default=0) # Find Parent Node\n",
-    "        parent_node = parents[parent_indent]\n",
+    "        parent_indent = max((i for i in parents if i < indent), default=-1) # Find Parent Node\n",
+    "        parent_node = parents[parent_indent] if parent_indent in parents else None\n",
     "\n",
     "        parents[indent] = node\n",
     "\n",
-    "        if parent_node not in hierarchy:\n",
-    "            hierarchy[parent_node] = []\n",
-    "        hierarchy[parent_node].append(node)\n",
+    "        if parent_node is not None:\n",
+    "            if parent_node not in hierarchy:\n",
+    "                hierarchy[parent_node] = []\n",
+    "            hierarchy[parent_node].append(node)\n",
     "\n",
     "    dot = graphviz.Digraph(format='png') #  Actual Generation\n",
-    "    add_nodes(dot, 'root', hierarchy)\n",
+    "    root_node = parents[0]\n",
+    "    add_nodes(dot, root_node, hierarchy)\n",
     "\n",
     "    dot.render(output_file, view=False) # Save Output\n",
     "\n",
     "def add_nodes(dot, parent, hierarchy):\n",
     "    if parent in hierarchy:\n",
+    "        dot.node(parent)\n",
     "        for node in hierarchy[parent]:\n",
-    "            if parent != 'root':\n",
-    "                dot.node(parent)\n",
-    "                dot.edge(parent, node)\n",
-    "            dot.node(node)\n",
+    "            dot.edge(parent, node)\n",
     "            add_nodes(dot, node, hierarchy)\n",
     "\n",
-    "generate_hierarchy_chart('input.txt', 'Hierarchy') # Usage\n",
+    "generate_hierarchy_chart('input.txt', 'hierarchy_chart') # Usage\n",
     "```\n",
     "\n",
     "**My Input File:**\n",
@@ -265,14 +265,14 @@
     "```json\n",
     "digraph {\n",
     "\tApplication\n",
-    "\tApplication\n",
     "\tApplication -> Backend\n",
-    "\tBackend\n",
     "\tBackend\n",
     "\tBackend -> Server\n",
     "\tServer\n",
-    "\tServer\n",
     "\tServer -> Routes\n",
+    "\tRoutes\n",
+    "\tRoutes -> GET\n",
+    "\tRoutes -> POST\n",
     "```\n",
     "See <a href=\"/imgs/design/hierarchy/hierarchy.html\" target=\"_blank\">Full File</a>\n",
     "\n",
