--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     "```\n",
     "\n",
     "**My Input File:**\n",
-    "```\n",
+    "```json\n",
     "Application\n",
     "    Backend\n",
     "        Server\n",
