Consistency with bolding & colons

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     "\n",
     "# **<u>Documented Design</u>**\n",
     "\n",
-    "### Example UI Implementation\n",
+    "### **Example UI Implementation**\n",
     "\n",
     "The main goals of our User Interface (UI) are:\n",
     "\n",
@@ -180,7 +180,7 @@
     "\n",
     "5. **Responsiveness**: The UI should be responsive, meaning it should look and function well on a variety of devices and screen sizes.\n",
     "\n",
-    "Here are some potential pages of a design that fulfills these features\n",
+    "Here are some potential pages of a design that fulfills these features:\n",
     "\n",
     "### **Navigation**\n",
     "\n",
