Updated hierarchy chart

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "                hierarchy[parent_node] = []\n",
     "            hierarchy[parent_node].append(node)\n",
     "\n",
-    "    dot = graphviz.Digraph(format='png') #  Actual Generation\n",
+    "    dot = graphviz.Digraph(format='png', graph_attr={'rankdir': 'TB', 'nodesep': '0.02', 'ranksep': '2.5', 'penwidth': '2', 'splines': 'true'}, node_attr={'penwidth': '3', 'style': 'bold'}) #  Actual Generation\n",
     "    root_node = parents[0]\n",
     "    add_nodes(dot, root_node, hierarchy)\n",
     "\n",
@@ -240,7 +240,7 @@
     "    if parent in hierarchy:\n",
     "        dot.node(parent)\n",
     "        for node in hierarchy[parent]:\n",
-    "            dot.edge(parent, node)\n",
+    "            dot.edge(parent, node, penwidth='5')\n",
     "            add_nodes(dot, node, hierarchy)\n",
     "\n",
     "generate_hierarchy_chart('input.txt', 'hierarchy_chart') # Usage\n",
@@ -278,7 +278,7 @@
     "\n",
     "**Hierarchy Chart Output:**\n",
     "\n",
-    "<img src=\"imgs/design/Hierarchy.png\" alt=\"hierarchy\" width=\"600\">\n"
+    "<img src=\"imgs/design/hierarchy.png\" alt=\"hierarchy\" width=\"600\">\n"
    ]
   }
  ],
