unified naming convention

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,23 +62,23 @@
     "\n",
     "1. **Notebooks and Paper Records:** Traditionally, people have used notebooks or paper records to keep track of medicine schedules. This method is simple and doesn't require any technical knowledge. However, it can be prone to human error and can be difficult to manage if there are multiple medicines or people involved.\n",
     "\n",
-    "<img src=\"imgs/analysis/PenPaper.png\" alt=\"pen-paper\" width=\"300\">\n",
+    "<img src=\"sources/analysis/imgs/pen_paper.png\" alt=\"pen-paper\" width=\"300\">\n",
     "\n",
     "2. **Memory:** Some people rely on their memory to remember when to take their medicine. This can work for individuals with a single medicine schedule, but it becomes increasingly difficult with more medicines or complex schedules. It's also unreliable due to the possibility of forgetting, especially for elderly individuals or those with memory-related health issues.\n",
     "\n",
-    "<img src=\"imgs/analysis/Thinking.png\" alt=\"thinking\" width=\"300\">\n",
+    "<img src=\"sources/analysis/imgs/thinking.png\" alt=\"thinking\" width=\"300\">\n",
     "\n",
     "3. **Applications:** There are several mobile & desktop apps available that help manage medicine schedules. These apps can send reminders, keep track of medicine intake, and sometimes even provide information about the medicines. However, the quality and features of these apps can vary greatly.\n",
     "\n",
-    "<img src=\"imgs/analysis/Applications.png\" alt=\"applications\" width=\"300\">\n",
+    "<img src=\"sources/analysis/imgs/applications.png\" alt=\"applications\" width=\"300\">\n",
     "\n",
     "4. **Healthcare Providers:** Healthcare providers often give advice on how to manage medicine schedules. In some cases, they may provide tools or services to help manage this. However, this is often limited to their patients and may not be available to everyone.\n",
     "\n",
-    "<img src=\"imgs/analysis/Healthcare.png\" alt=\"healthcare\" width=\"300\">\n",
+    "<img src=\"sources/analysis/imgs/healthcare.png\" alt=\"healthcare\" width=\"300\">\n",
     "\n",
     "5. **Pharmacy Services:** Some pharmacies offer medicine management services. They can pre-package medicines according to the schedule, which can make it easier to manage. However, this service is usually only available for medicines purchased from that pharmacy.\n",
     "\n",
-    "<img src=\"imgs/analysis/Prescription.png\" alt=\"prescription\" width=\"300\">\n",
+    "<img src=\"sources/analysis/imgs/prescription.png\" alt=\"prescription\" width=\"300\">\n",
     "\n",
     "\n",
     "### **<u>Questions to Consider</u>**\n",
@@ -186,19 +186,19 @@
     "\n",
     "With a navbar that's just a hamburger away, it allows for quick navigation for all users, helping them find exactly what is needed in a much more categorised way.\n",
     "\n",
-    "<img src=\"imgs/design/Navbar.png\" alt=\"navbar\" width=\"600\">\n",
+    "<img src=\"sources/design/imgs/navbar.png\" alt=\"navbar\" width=\"600\">\n",
     "\n",
     "### **Logs**\n",
     "\n",
     "Keeping logs is vital, especially if managing a nursing home. With these, it'll be much easier to find any unauthorised access attempts, as well as create a rollback point in the unlikely event of database issues.  \n",
     "\n",
-    "<img src=\"imgs/design/Logs.png\" alt=\"logs\" width=\"600\">\n",
+    "<img src=\"sources/design/imgs/logs.png\" alt=\"logs\" width=\"600\">\n",
     "\n",
     "### **User Settings**\n",
     "\n",
     "Having a dedicated user settings page will allow for quick changes to a system, something particularly useful for if sharing access with others on a network.\n",
     "\n",
-    "<img src=\"imgs/design/User-Settings.png\" alt=\"user-settings\" width=\"600\">\n",
+    "<img src=\"sources/design/imgs/user_settings.png\" alt=\"user-settings\" width=\"600\">\n",
     "\n",
     "\n",
     "### Hierarchy Chart\n",
@@ -259,7 +259,7 @@
     "            Middleware\n",
     "                Authentication\n",
     "```\n",
-    "See <a href=\"/imgs/design/hierarchy/hierarchyInput.html\" target=\"_blank\">Full File</a>\n",
+    "See <a href=\"/sources/design/hierarchy/hierarchy_input.html\" target=\"_blank\">Full File</a>\n",
     "\n",
     "**Generated Config File:**\n",
     "```json\n",
@@ -274,11 +274,11 @@
     "\tRoutes -> GET\n",
     "\tRoutes -> POST\n",
     "```\n",
-    "See <a href=\"/imgs/design/hierarchy/hierarchy.html\" target=\"_blank\">Full File</a>\n",
+    "See <a href=\"/sources/design/hierarchy/hierarchy.html\" target=\"_blank\">Full File</a>\n",
     "\n",
     "**Hierarchy Chart Output:**\n",
     "\n",
-    "<img src=\"imgs/design/hierarchy.png\" alt=\"hierarchy\" width=\"600\">\n"
+    "<img src=\"/sources/design/imgs/hierarchy_chart.png\" alt=\"hierarchy\" width=\"600\">\n"
    ]
   }
  ],
