--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,11 @@
     "\n",
     "**Hierarchy Chart Output:**\n",
     "\n",
-    "<img src=\"/sources/design/imgs/hierarchy_chart.png\" alt=\"hierarchy\" width=\"900\">\n"
+    "<img src=\"/sources/design/imgs/hierarchy_chart.png\" alt=\"hierarchy\" width=\"900\">\n",
+    "\n",
+    "\n",
+    "# Technical Solution\n",
+    "See <a href=\"/sources/technical/python/main.html\" target=\"_blank\">Full File</a>\n"
    ]
   }
  ],
