Adjusted to fix some errors

--- a/sources/technical/python/main.ipynb
+++ b/sources/technical/python/main.ipynb
@@ -338,6 +338,15 @@
     "        conn = sqlite3.connect(self.db_location)\n",
     "        cursor = conn.cursor()\n",
     "\n",
+    "        # Check if the reminders table exists\n",
+    "        cursor.execute(\"\"\"\n",
+    "            SELECT name FROM sqlite_master WHERE type='table' AND name='reminders';\n",
+    "        \"\"\")\n",
+    "        if cursor.fetchone() is None:\n",
+    "            # The reminders table does not exist, so return without loading data\n",
+    "            conn.close()\n",
+    "            return\n",
+    "\n",
     "        cursor.execute(\"\"\"\n",
     "            SELECT r.id, p.name, m.name, r.reminder_time, r.active\n",
     "            FROM reminders r\n",
@@ -625,49 +634,29 @@
     "        self.reminders_export_json.clicked.connect(lambda: self.export_data('reminders', 'json'))\n",
     "        self.reminders_export_xlsx.clicked.connect(lambda: self.export_data('reminders', 'xlsx'))\n",
     "\n",
-    "\n",
-    "\n",
-    "        # Admin logs section\n",
-    "        \"\"\"\n",
-    "        self.admin_logs_label = QLabel(\"Admin logs\")\n",
-    "        self.admin_logs_label.setFont(QFont('Arial', 12))\n",
-    "        self.admin_logs_box = QTextEdit()\n",
-    "        self.admin_logs_box.setReadOnly(True)\n",
-    "        self.admin_logs_box.setFrameShape(QFrame.Shape.StyledPanel)\n",
-    "        self.admin_logs_box.setFrameShadow(QFrame.Shadow.Sunken)\n",
-    "        self.admin_logs_box.setLineWidth(2)\n",
-    "        self.admin_logs_box.setMidLineWidth(3)\n",
-    "        self.admin_logs_box.setContentsMargins(6, 6, 6, 6)  # Set the margins to create the rounded corners\n",
-    "\n",
-    "        # Export buttons for admin logs\n",
-    "        self.admin_logs_export_layout = QHBoxLayout()\n",
-    "        self.admin_logs_export_csv = QPushButton(\"Export as .csv\")\n",
-    "        self.admin_logs_export_json = QPushButton(\"Export as .json\")\n",
-    "        self.admin_logs_export_xlsx = QPushButton(\"Export as .xlsx\")\n",
-    "        self.admin_logs_export_layout.addWidget(self.admin_logs_export_csv)\n",
-    "        self.admin_logs_export_layout.addWidget(self.admin_logs_export_json)\n",
-    "        self.admin_logs_export_layout.addWidget(self.admin_logs_export_xlsx)\n",
-    "\n",
-    "        # Connect export buttons to their respective methods\n",
-    "        self.admin_logs_export_csv.clicked.connect(lambda: self.export_data('admin_logs', 'csv'))\n",
-    "        self.admin_logs_export_json.clicked.connect(lambda: self.export_data('admin_logs', 'json'))\n",
-    "        self.admin_logs_export_xlsx.clicked.connect(lambda: self.export_data('admin_logs', 'xlsx'))\n",
-    "        \"\"\"\n",
-    "\n",
     "        # Add widgets to the main layout\n",
     "        self.layout.addWidget(self.reminders_label)\n",
     "        self.layout.addWidget(self.reminders_box)\n",
     "        self.layout.addLayout(self.reminders_export_layout)\n",
-    "        \"\"\"\n",
-    "        self.layout.addWidget(self.admin_logs_label)\n",
-    "        self.layout.addWidget(self.admin_logs_box)\n",
-    "        self.layout.addLayout(self.admin_logs_export_layout)\n",
-    "        \"\"\"\n",
+    "\n",
+    "        self.refresh_button = QPushButton(\"Refresh\")\n",
+    "        self.refresh_button.clicked.connect(self.load_logs)\n",
+    "        self.layout.addWidget(self.refresh_button)\n",
+    "\n",
     "        self.setLayout(self.layout)\n",
     "\n",
     "    def load_logs(self):\n",
     "        conn = sqlite3.connect(self.db_location)\n",
     "        cursor = conn.cursor()\n",
+    "\n",
+    "        # Check if the log table exists\n",
+    "        cursor.execute(\"\"\"\n",
+    "            SELECT name FROM sqlite_master WHERE type='table' AND name='log';\n",
+    "        \"\"\")\n",
+    "        if cursor.fetchone() is None:\n",
+    "            # The log table does not exist, so return without loading data\n",
+    "            conn.close()\n",
+    "            return\n",
     "\n",
     "        cursor.execute(\"\"\"\n",
     "            SELECT l.id, p.name, m.name, l.action, l.timestamp\n",
@@ -677,6 +666,9 @@
     "            JOIN medications m ON r.medication_id = m.id\n",
     "        \"\"\")\n",
     "        logs = cursor.fetchall()\n",
+    "\n",
+    "        # Clear the reminders_box before appending new logs\n",
+    "        self.reminders_box.clear()\n",
     "\n",
     "        for log_id, person, medication, action, timestamp in logs:\n",
     "            self.reminders_box.append(f\"ID: {log_id}, Person: {person}, Medication: {medication}, Action: {action}, Timestamp: {timestamp}\")\n",
