Add a box for later - what can improve

--- a/sources/technical/python/main.ipynb
+++ b/sources/technical/python/main.ipynb
@@ -770,6 +770,13 @@
     "        self.layout.addWidget(self.change_password_btn)\n",
     "        self.setLayout(self.layout)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **<u>What Could Improve / Isn't Finished</u>**"
+   ]
   }
  ],
  "metadata": {
