Added further design, ipynb maintainability

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,8 +41,13 @@
    "metadata": {},
    "source": [
     "# **<u>Contents</u>**\n",
-    "<div id=\"toc\"></div>\n",
-    "\n",
+    "<div id=\"toc\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **<u>Analysis</u>**\n",
     "\n",
     "### **<u>Overview</u>**\n",
@@ -163,9 +168,13 @@
     "    - **Overriding Schedules:** The system is not designed to handle emergency situations where normal medicine administration schedules may need to be overridden.\n",
     "\n",
     "8. **Regulatory Compliance:**\n",
-    "    - **Legal Requirements:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
-    "\n",
-    "\n",
+    "    - **Legal Requirements:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **<u>Documented Design</u>**\n",
     "\n",
     "### **Example UI Implementation**\n",
@@ -188,11 +197,19 @@
     "\n",
     "<img src=\"sources/design/imgs/navbar.png\" alt=\"navbar\" width=\"600\">\n",
     "\n",
+    "A more improved website version rather than a more PyUI focused one could look like this:\n",
+    "\n",
+    "<img src=\"sources/design/imgs/navbar-v2.png\" alt=\"navbar\" width=\"600\">\n",
+    "\n",
     "### **Logs**\n",
     "\n",
     "Keeping logs is vital, especially if managing a nursing home. With these, it'll be much easier to find any unauthorised access attempts, as well as create a rollback point in the unlikely event of database issues.  \n",
     "\n",
     "<img src=\"sources/design/imgs/logs.png\" alt=\"logs\" width=\"600\">\n",
+    "\n",
+    "The same for the navigation design, a more website-friendly design could be like:\n",
+    "\n",
+    "<img src=\"sources/design/imgs/logs-v2.png\" alt=\"logs\" width=\"600\">\n",
     "\n",
     "### **User Settings**\n",
     "\n",
@@ -200,8 +217,12 @@
     "\n",
     "<img src=\"sources/design/imgs/user_settings.png\" alt=\"user-settings\" width=\"600\">\n",
     "\n",
+    "As with the other designs, it could look more like:\n",
     "\n",
-    "### Hierarchy Chart\n",
+    "<img src=\"sources/design/imgs/user_settings-v2.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "\n",
+    "### **Hierarchy Chart**\n",
     "\n",
     "**To create a hierarchy chart visualisation for the design, I wrote up some code that would take in an input file of an easily understandable config, convert that to something that is easier to work with code-wise, and then create a graphic visualisation of this.**\n",
     "\n",
@@ -278,11 +299,22 @@
     "\n",
     "**Hierarchy Chart Output:**\n",
     "\n",
-    "<img src=\"/sources/design/imgs/hierarchy_chart.png\" alt=\"hierarchy\" width=\"900\">\n",
-    "\n",
-    "\n",
-    "# Technical Solution\n",
-    "See <a href=\"/sources/technical/python/main.html\" target=\"_blank\">Full File</a>\n"
+    "<img src=\"/sources/design/imgs/hierarchy_chart.png\" alt=\"hierarchy\" width=\"900\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **<u>Technical Solution</u>**\n",
+    "See <a href=\"/sources/technical/python/main.html\" target=\"_blank\">Full File</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **<u>Testing</u>**"
    ]
   }
  ],
