Add all testing images

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **<u>Testing</u>**"
+    "# **<u>Testing</u>**\n",
+    "\n",
+    "### <u>**Manage DB Page**</u>\n",
+    "\n"
    ]
   }
  ],
