--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,84 @@
     "# **<u>Testing</u>**\n",
     "\n",
     "### <u>**Manage DB Page**</u>\n",
-    "\n"
+    "\n",
+    "<img src=\"sources/testing/imgs/managedb/managedb_create.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/managedb/managedb_rename.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/managedb/managedb_deleteconfirm.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/managedb/managedb_delete.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "All of this works as expected:\n",
+    "- For the creation, if it already exists, it raises an error, otherwise it creates the database with the required tables.\n",
+    "- For the rename, if the user doesn't include .db in the new name, it is auto added, otherwise it stays the same.\n",
+    "- For deleting the database, they have to retype the database name to prevent any accidents.\n",
+    "\n",
+    "### <u>**Home Page**</u>\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/home/home_lower.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/home/home_adduser.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/home/home_addmed.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/home/home_addreminderactive.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/home/home_addreminderinactive.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/home/home_addreminderissue.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "Most of this works as expected:\n",
+    "- You cannot have any non-natural number inputs where they wouldn't be expected\n",
+    "- Adding users and medicine works as expected\n",
+    "- Reminder creation works mostly as expected\n",
+    "- An issue arises where the user attempts to create a reminder with userIDs / medIDs that don't exist in the database but this would be an easy search fix.\n",
+    "\n",
+    "### <u>**Reminders**</u>\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/reminders/reminders_infoactive.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/reminders/reminders_infoinactive.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "All of this works as expected:\n",
+    "- If the reminder was marked as active on creation, it is displayed.\n",
+    "- If it wasn't, it isn't.\n",
+    "\n",
+    "### <u>**Logs**</u>\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/logs/logs_info.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/logs/logs_exportcsv.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/logs/logs_exportjson.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/logs/logs_exportxlsx.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "All of this works as expected:\n",
+    "- If reminders have been created, they are displayed in the scrollable box.\n",
+    "- You can successfully export to csv, json, and xlsx.\n",
+    "\n",
+    "### <u>**Other**</u>\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/other/csv_proof.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/other/json_proof.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/other/xlsx_proof.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "All of this works as expected:\n",
+    "- Valid .csv, .json, .xlsx, files can be exported to be worked with.\n",
+    "\n",
+    "### <u>**[Unfinished] User Settings**</u>\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/usersettings/usersettings_page.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "<img src=\"sources/testing/imgs/usersettings/usersettings_censor.png\" alt=\"user-settings\" width=\"600\">\n",
+    "\n",
+    "This partly works as expected:\n",
+    "- It is all created UI wise to work with.\n",
+    "- Passwords entered are censored unless the reveal button is used, this auto re-reveals if they click on a different box."
    ]
   }
  ],
