--- a/index.ipynb
+++ b/index.ipynb
@@ -396,6 +396,24 @@
     "- It is all created UI wise to work with.\n",
     "- Passwords entered are censored unless the reveal button is used, this auto re-reveals if they click on a different box."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **<u>Evaluation</u>**\n",
+    "\n",
+    "Overall, I somewhat achieved a working solution for my objectives given the time constraints.\n",
+    "1. **Database Management:** The solution successfully managed a database containing information about people, medicine, reminders, and logs. This means that it was able to create, read, update, and delete data in an organised and efficient manner.\n",
+    "2. **Medicine Intake Logging and Reminders:** The solution could successfully log when a user took their medicine and set reminders for when the next dose should be taken. This is a crucial feature for ensuring that users take their medication on time and don't miss any doses.\n",
+    "3. **User Interface:** The User Interface (UI) was easily interpretable and made sense to users. This means that users could easily navigate through the application and understand how to use its features without much difficulty.\n",
+    "4. **Error Handling:** The solution had error handling for several situations. This means that it was able to anticipate and handle potential errors in a way that prevented the application from crashing and provided useful feedback to the user.\n",
+    "\n",
+    "However, there were also some areas where the solution fell short:\n",
+    "1. **UI Recoding:** The UI had to be recoded from HTML (using the Bootstrap framework) to PyQt6 due to issues with the navbar. This was a time-consuming process that had to be done late at night, which may have affected the quality of the code, and ultimately lost a few hours of work.\n",
+    "2. **Database Access Issues:** There were issues with how the database was accessed, which could lead to connection issues or unexpected errors. This suggests that the solution could benefit from a more robust and reliable method of database access.\n",
+    "3. **Unfinished Parts:** Some parts of the solution were left unfinished. For example, there were no notification reminders, the user settings page was purely cosmetic because the login system wasn't even attempted, and some error handling wasn't introduced. These are areas that could be improved in future iterations of the solution."
+   ]
   }
  ],
  "metadata": {
